--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url("/img/bg/bg-hero.jpg") center center / cover no-repeat;
+  background: url("./img/bg/bg-hero.jpg") center center / cover no-repeat;
   color: #fff;
   position: relative;
 }
