--- a/css/main.css
+++ b/css/main.css
@@ -613,7 +613,7 @@ img {
 }
 
 .hero {
-  background: url("/img/bg/bg-hero.jpg") center center/cover no-repeat;
+  background: url("./img/bg/bg-hero.jpg") center center/cover no-repeat;
   color: #fff;
   position: relative;
 }
