add img background directory path

--- a/css/blocks/features.scss
+++ b/css/blocks/features.scss
@@ -1,5 +1,5 @@
 .features {
-  background: url('/img/bg/bg-features.jpg') center center / cover no-repeat;
+  background: url('../img/bg/bg-features.jpg') center center / cover no-repeat;
 }
 
 .features__list {
