--- a/css/blocks/feature.scss
+++ b/css/blocks/feature.scss
@@ -7,7 +7,7 @@
   justify-content: center;
 }
 
-.feature__title {
+.feature__content h3 {
   @include lifehack();
   font-size: 24px;
   line-height: 28.14px;
@@ -16,7 +16,7 @@
   margin: 0;
 }
 
-.feature__text {
+.feature__content div p {
   padding-top: 19px;
   opacity: 0.8;
   font-size: 14px;
