--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -1,9 +1,12 @@
 $itemsMargin: 13px;
 
+.menu {
+  margin-right: 15px;
+}
+
 .menu__list {
   display: flex;
   align-items: center;
-  margin-right: 15px;
 }
 
 .menu__item {
