--- a/css/blocks/feature.scss
+++ b/css/blocks/feature.scss
@@ -12,8 +12,6 @@
   font-size: 24px;
   line-height: 28.14px;
   letter-spacing: -0.6px;
-  padding-top: 38px;
-  margin: 0;
 }
 
 .feature__content div p {
@@ -21,4 +19,8 @@
   opacity: 0.8;
   font-size: 14px;
   line-height: 24.07px;
+}
+
+.feature__content {
+  margin-top: 38px;
 }
