--- a/css/main.css
+++ b/css/main.css
@@ -573,10 +573,13 @@ img {
   align-items: center;
 }
 
+.menu {
+  margin-right: 15px;
+}
+
 .menu__list {
   display: flex;
   align-items: center;
-  margin-right: 15px;
 }
 
 .menu__item {
@@ -694,8 +697,6 @@ img {
   font-size: 24px;
   line-height: 28.14px;
   letter-spacing: -0.6px;
-  padding-top: 38px;
-  margin: 0;
 }
 
 .feature__content div p {
@@ -703,6 +704,10 @@ img {
   opacity: 0.8;
   font-size: 14px;
   line-height: 24.07px;
+}
+
+.feature__content {
+  margin-top: 38px;
 }
 
 .reviews {
@@ -813,4 +818,142 @@ img {
   border: 1px solid #fff;
   border-radius: 50%;
   transition: 0.3s;
+}
+
+.team {
+  background: url(../img/bg/bg-team.png) center center/cover no-repeat;
+  position: relative;
+}
+
+.team-container {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  right: 0;
+  background-color: #291e07bd;
+}
+
+.team__item-pic {
+  overflow: hidden;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: relative;
+}
+
+.team__avatar-img {
+  max-width: 100%;
+  display: block;
+}
+
+.accordion-container {
+  padding-top: 10%;
+  padding-left: 20%;
+}
+
+.accordion {
+  width: 100%;
+  overflow: hidden;
+  margin: 10px auto;
+  padding: 10px;
+}
+
+.accordion section {
+  float: left;
+  overflow: hidden;
+  cursor: pointer;
+  margin: 3px;
+}
+
+.accordion section:hover {
+  background: #444;
+}
+
+.accordion section h3 {
+  font-family: "Ubuntu", Helvetica, sans-serif;
+  font-weight: 300;
+  display: none;
+  font-size: 14px;
+}
+
+.accordion section:after {
+  position: relative;
+  font-size: 24px;
+  color: #000;
+  font-weight: bold;
+}
+
+.accordion section:nth-child(1):after {
+  content: "1";
+}
+
+.accordion section:nth-child(2):after {
+  content: "2";
+}
+
+.accordion section:nth-child(3):after {
+  content: "3";
+}
+
+.accordion section:nth-child(4):after {
+  content: "4";
+}
+
+.accordion section:target {
+  color: #fff;
+  padding: 10px;
+}
+
+.accordion section:target:hover {
+  color: #fff;
+}
+
+.accordion section:target h2 {
+  width: 100%;
+}
+
+.accordion section:target h2 a {
+  color: #f9b43b;
+  font-family: "Gagalin-Regular", Helvetica, sans-serif;
+  padding: 0;
+}
+
+.accordion section:target h3 {
+  display: block;
+}
+
+.accordion section h2 a {
+  font-family: "Gagalin-Regular", Helvetica, sans-serif;
+  padding: 8px 10px;
+  display: block;
+  font-size: 14px;
+  font-weight: normal;
+  color: #fff;
+  text-decoration: none;
+}
+
+.vertical section {
+  width: 100%;
+  height: 40px;
+  transition: height 0.2s ease-out;
+}
+
+.vertical :target {
+  height: 250px;
+  width: 97%;
+}
+
+.vertical section h2 {
+  position: relative;
+  left: 0;
+  top: -15px;
+}
+
+.vertical section:after {
+  top: -60px;
+  left: 810px;
+}
+
+.vertical section:target:after {
+  left: -9999px;
 }
