--- a/css/main.css
+++ b/css/main.css
@@ -820,53 +820,61 @@ img {
   transition: 0.3s;
 }
 
-.team {
+.teams {
   background: url(../img/bg/bg-team.png) center center/cover no-repeat;
   position: relative;
 }
 
-.team-container {
+.team {
+  display: flex;
+  align-items: flex-start;
+}
+
+.team-content {
   position: absolute;
   width: 50%;
   height: 100%;
   right: 0;
-  background-color: #291e07bd;
+  background-color: #343739d2;
+}
+
+.team__name::before {
+  content: url(/img/content/accordion-arrow-down.svg);
+  margin-right: 5px;
 }
 
 .team__item-pic {
+  display: flex;
   overflow: hidden;
-  width: 40px;
-  height: 40px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   position: relative;
+  margin-right: 3%;
+  min-width: 100px;
+  min-height: 100px;
+  justify-content: center;
+  align-items: center;
 }
 
 .team__avatar-img {
-  max-width: 100%;
-  display: block;
+  max-height: 100%;
+  max-width: none;
 }
 
 .accordion-container {
-  padding-top: 10%;
+  padding-top: 20%;
   padding-left: 20%;
 }
 
 .accordion {
   width: 100%;
-  overflow: hidden;
-  margin: 10px auto;
-  padding: 10px;
 }
 
 .accordion section {
   float: left;
   overflow: hidden;
   cursor: pointer;
-  margin: 3px;
-}
-
-.accordion section:hover {
-  background: #444;
 }
 
 .accordion section h3 {
@@ -879,7 +887,6 @@ img {
 .accordion section:after {
   position: relative;
   font-size: 24px;
-  color: #000;
   font-weight: bold;
 }
 
@@ -901,7 +908,6 @@ img {
 
 .accordion section:target {
   color: #fff;
-  padding: 10px;
 }
 
 .accordion section:target:hover {
@@ -918,14 +924,16 @@ img {
   padding: 0;
 }
 
+.accordion section:target h2 a::before {
+  content: url(/img/content/accordion-arrow-up.svg);
+}
+
 .accordion section:target h3 {
   display: block;
 }
 
 .accordion section h2 a {
   font-family: "Gagalin-Regular", Helvetica, sans-serif;
-  padding: 8px 10px;
-  display: block;
   font-size: 14px;
   font-weight: normal;
   color: #fff;
@@ -933,27 +941,21 @@ img {
 }
 
 .vertical section {
-  width: 100%;
+  width: 70%;
   height: 40px;
   transition: height 0.2s ease-out;
 }
 
 .vertical :target {
-  height: 250px;
-  width: 97%;
+  height: 160px;
 }
 
 .vertical section h2 {
   position: relative;
   left: 0;
-  top: -15px;
 }
 
 .vertical section:after {
   top: -60px;
   left: 810px;
-}
-
-.vertical section:target:after {
-  left: -9999px;
 }
