--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -1,14 +1,14 @@
 .btn {
-  background: $red;
-  text-decoration: none;
-  text-transform: uppercase;
-  border-radius: 5px;
-  font-size: 13px;
-  display: inline-block;
-  padding: 9px 17.5px;
-  margin-left: 15px;
-}
-
-.btn:hover {
-  background: #c1401e;
-}
+	@include inlineblock();
+	background: $orange;
+	font-size: rem(13px);
+	text-transform: uppercase;
+	color: #fff;
+	text-align: center;
+	text-decoration: none;
+	border-radius: rem(5px);
+	padding: rem(9px) rem(16px);
+	@include ubuntu(medium);
+	&:hover {
+		background: #c1401e;
+	  }
