--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -1,12 +1,30 @@
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 12px;
+	padding-top: rem(12px);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.header__btns {
+.header__logo {
+	@include laptop {
+		width: 15%;
+	}
+}
+
+.header__links {
   display: flex;
   align-items: center;
 }
 
+.header__menu {
+	flex: 1;
+	text-align: right;
+
+	@include laptop {
+		width: 85%;
+	}
+
+	@include tablets {
+		text-align: right;
+	}
+}
