add section slidder

--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -83,7 +83,7 @@
   justify-content: center;
   &:hover {
     .down-arrow__icon {
-      margin-top: rem(-15px);
+      margin-bottom: rem(-15px);
       width: rem(45px);
       height: rem(45px);
     }
