--- a/css/blocks/nav.scss
+++ b/css/blocks/nav.scss
@@ -12,7 +12,7 @@
 		.nav__item {
 			display: block;
 			text-align: center;
-			opacity: 0;
+			// opacity: 0;
 			animation-fill-mode: forwards;
 
 			&:after {
