--- a/css/main.scss
+++ b/css/main.scss
@@ -49,3 +49,4 @@ $desktop: 1200px;
 @import "./blocks/team-acco.scss";
 @import "./blocks/team.scss";
 @import "./blocks/text-block.scss";
+@import "./blocks/slider.scss";
