--- a/css/blocks/menu-acco.scss
+++ b/css/blocks/menu-acco.scss
@@ -51,10 +51,11 @@
 
 .menu-acco__content {
   height: 100%;
-  float: left;
+  // float: left;
   background: rgba(#2f3234, .93);
   width: 0;
   overflow: hidden;
+  transition: width .6s;
 }
 
 .menu-acco__text {
@@ -64,16 +65,31 @@
   padding: rem(60px) rem(30px);
   width: 100%;
   line-height: 1.8;
-  display: none;
+  // display: none;
 
   @include phones {
     padding: rem(25px) rem(15px);
   }
 }
 
-.show-hidden__menu {
-  width: rem(400px);
+.menu-acco__item--active .menu-acco__content {
+  width: rem(540px);
+
   @include phones {
-    width: rem(220px)
+    width: rem(200px)
+  }
+}
+
+.menu-acco__item--active .menu-acco__text {
+  animation: acco-text .8s linear forwards;
+}
+
+@keyframes acco-text {
+  75% {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
