--- a/css/blocks/section.scss
+++ b/css/blocks/section.scss
@@ -1,31 +1,32 @@
 .section {
-	// height: 100%;
-	height: 100vh;
-	min-height: rem(650px);
-	position: relative;
-  display: flex;
-  overflow: hidden;
-  
-	@include tablets {
-		min-height: initial;
-    // height: 100vh;
-	}
+    height: 100%;
+    height: 100vh;
+    min-height: rem(650px);
+    position: relative;
+    display: flex;
+    overflow: hidden;
+
+    @include tablets {
+        min-height: initial;
+        height: 100vh;
+    }
 }
 
 .section__title {
-	color: $yellow;
-	font-size: rem(72px);
-	@include gagalin;
-	margin-bottom: rem(12px);
+    color: $yellow;
+    font-size: rem(72px);
+    @include gagalin;
+    margin-bottom: rem(12px);
 
-	&.section__title_black {
-		color: $black;
-		@include phones {
-			font-size: rem(50px);
-		}
-	}
+    &.section__title_black {
+        color: $black;
 
-	&.section__title_white {
-		color: white;
-	}
+        @include phones {
+            font-size: rem(50px);
+        }
+    }
+
+    &.section__title_white {
+        color: white;
+    }
 }
