--- a/css/main.css
+++ b/css/main.css
@@ -1119,6 +1119,11 @@ footer {
   text-decoration: none;
   position: relative;
 }
+@media screen and (max-width: 768px) {
+  .menu-acco__trigger {
+    width: 4.0625rem;
+  }
+}
 @media screen and (max-width: 480px) {
   .menu-acco__trigger {
     width: 3.125rem;
@@ -1168,11 +1173,16 @@ footer {
 }
 
 .menu-acco__item--active .menu-acco__content {
-  width: 33.75rem;
+  width: 34.375rem;
+}
+@media screen and (max-width: 768px) {
+  .menu-acco__item--active .menu-acco__content {
+    width: 21.875rem;
+  }
 }
 @media screen and (max-width: 480px) {
   .menu-acco__item--active .menu-acco__content {
-    width: 12.5rem;
+    width: 13.75rem;
   }
 }
 
@@ -1658,6 +1668,7 @@ footer {
 }
 
 .section {
+  height: 100%;
   height: 100vh;
   min-height: 40.625rem;
   position: relative;
@@ -1667,6 +1678,7 @@ footer {
 @media screen and (max-width: 768px) {
   .section {
     min-height: initial;
+    height: 100vh;
   }
 }
 
@@ -1784,13 +1796,34 @@ footer {
 
 .team-acco__content {
   padding-top: 0.875rem;
-  display: none;
   margin-right: -1.25rem;
+  display: none;
 }
 @media screen and (max-width: 768px) {
   .team-acco__content {
     padding: 0 25%;
   }
+}
+
+.team-acco__item--active .team-acco__content {
+  animation: acco-text 0.6s;
+  display: block;
+}
+
+.team-acco__item--active .team-acco__text {
+  animation: acco-text 0.6s;
+}
+
+@keyframes acco-text {
+  75% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.team-acco__item--active .team-acco__trigger:before {
+  transform: rotate(180deg);
 }
 
 .team-acco__pic {
