--- a/css/blocks/hamburger-menu.scss
+++ b/css/blocks/hamburger-menu.scss
@@ -4,7 +4,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: rgba(#2f3234, .99);
+	background: rgba(#2f3234, 1);
 	align-items: center;
 	justify-content: center;
 	z-index: 100;
