--- a/css/blocks/popups.scss
+++ b/css/blocks/popups.scss
@@ -1,66 +1,81 @@
 .popup {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background: rgba(#ffffff, .99);
-	z-index: 100;
-	display: none;
-	transition: opacity .3s;
-	font-size: rem(14px);
+    display: none;
 }
 
 .full-review {
-	padding: rem(25px) rem(20px);
+	position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(#2f3234, .99);
+    z-index: 100;
+    transition: opacity .3s;
+    justify-content: center;
+    align-items: center;
+}
+
+.full-review__popup {
+    background: wheat;
+    position: relative;
+    margin: 15%;
+    transition: opacity .3s;
+    font-size: rem(14px);
+    border-radius: rem(5px);
+    padding: rem(50px) rem(20px);
+}
+
+.full-review {
+    padding: rem(25px) rem(20px);
 }
 
 .full-review__title {
-	@include gagalin;
-	font-size: rem(14px);
-	text-transform: uppercase;
-	margin-bottom: rem(25px);
+    @include gagalin;
+    font-size: rem(14px);
+    text-transform: uppercase;
+    margin-bottom: rem(25px);
 }
 
 .full-review__content {
-	font-size: rem(14px);
-	@include ubuntu();
+    font-size: rem(14px);
+    @include ubuntu();
 }
 
 .full-review__close {
-	width: rem(15px);
-	height: rem(15px);
-	display: block;
-	position: absolute;
-	right: rem(20px);
-	top: rem(20px);
-	opacity: .7;
-	transition: .3s;
+    fill: rgb(255, 61, 61);
+    width: rem(15px);
+    height: rem(15px);
+    display: block;
+    position: absolute;
+    right: rem(20px);
+    top: rem(20px);
+    opacity: .7;
+    transition: .3s;
 
-	&:hover {
-		opacity: 1;
-	}
+    &:hover {
+        opacity: 1;
+    }
 
-	svg {
-		width: 100%;
-		height: 100%;
-	}
+    svg {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .status-popup__inner {
-	padding: rem(20px);
-	text-align: center;
+    padding: rem(20px);
+    text-align: center;
 }
 
 .status-popup__message {
-	margin-bottom: rem(20px);
-	font-size: rem(14px);
+    margin-bottom: rem(20px);
+    font-size: rem(14px);
 }
 
 .status-popup {
-	width: rem(240px);
+    width: rem(240px);
 }
 
 .error-message {
-	color: $red;
+    color: $red;
 }
