--- a/css/blocks/slider.scss
+++ b/css/blocks/slider.scss
@@ -132,8 +132,8 @@
   left: 50%;
   transform: translateX(-50%);
   max-width: 100%;
-  max-height: 100%;
-  padding-top: 20%;
+  max-height: rem(400px);
+  margin-top: 22%;
 
   @include tablets {
     max-width: 80%;
@@ -165,7 +165,7 @@
   background-color: #e34f27;
   border-radius: rem(5px);
   text-decoration: none;
-  margin-bottom: rem(300px);
+  margin-bottom: rem(320px);
 
   @include tablets {
     margin: 0 50% 0 0;
