--- a/css/blocks/popups.scss
+++ b/css/blocks/popups.scss
@@ -72,8 +72,33 @@
     font-size: rem(14px);
 }
 
-.status-popup {
-    width: rem(240px);
+.status-popup__success {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(#2f3234, .99);
+    z-index: 100;
+    transition: opacity .3s;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+
+.status-popup__errors {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(#2f3234, .99);
+    z-index: 100;
+    transition: opacity .3s;
+    justify-content: center;
+    align-items: center;
+    display: none;
 }
 
 .error-message {
