--- a/css/blocks/slider.scss
+++ b/css/blocks/slider.scss
@@ -66,9 +66,6 @@
 
 }
 
-
-
-
 .slider__left,
 .slider__right {
   float: left;
@@ -138,6 +135,7 @@
   @include tablets {
     max-width: 80%;
     padding: 0;
+    margin-top: 5%;
   }
 }
 
