--- a/css/main.scss
+++ b/css/main.scss
@@ -50,3 +50,4 @@ $desktop: 1200px;
 @import "./blocks/team.scss";
 @import "./blocks/text-block.scss";
 @import "./blocks/slider.scss";
+@import "./blocks/composition.scss";
