--- a/css/blocks/slider.scss
+++ b/css/blocks/slider.scss
@@ -174,6 +174,7 @@
   border-radius: rem(5px);
   text-decoration: none;
   margin-bottom: rem(320px);
+  opacity: 60%;
 
   @include tablets {
     margin: 0 rem(300px) 0 0;
@@ -181,6 +182,11 @@
   @include phones {
     margin: 0 rem(200px) 0 0;
   }
+}
+
+.slider__structure:hover {
+  background-color: #e34f27;
+  opacity: 100%;
 }
 
 .slider__calories {
