--- a/css/main.css
+++ b/css/main.css
@@ -2155,6 +2155,7 @@ footer {
   border-radius: 0.3125rem;
   text-decoration: none;
   margin-bottom: 20rem;
+  opacity: 60%;
 }
 @media screen and (max-width: 768px) {
   .slider__structure {
@@ -2165,6 +2166,11 @@ footer {
   .slider__structure {
     margin: 0 12.5rem 0 0;
   }
+}
+
+.slider__structure:hover {
+  background-color: #e34f27;
+  opacity: 100%;
 }
 
 .slider__calories {
@@ -2239,6 +2245,7 @@ footer {
   display: none;
   border-radius: 5px;
   background: #ffffff;
+  opacity: 80%;
   position: absolute;
   flex-flow: column nowrap;
   padding: 1.5625rem;
